@@ -520,6 +520,42 @@ name|lastModified
 argument_list|()
 return|;
 block|}
+comment|/** Set the modified time of an existing file to now. */
+DECL|method|touchFile
+specifier|public
+name|void
+name|touchFile
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|SecurityException
+block|{
+name|File
+name|file
+init|=
+operator|new
+name|File
+argument_list|(
+name|directory
+argument_list|,
+name|name
+argument_list|)
+decl_stmt|;
+name|file
+operator|.
+name|setLastModified
+argument_list|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** Returns the length in bytes of a file in the directory. */
 DECL|method|fileLength
 specifier|public
