@@ -247,6 +247,43 @@ operator|.
 name|lastModified
 return|;
 block|}
+comment|/** Set the modified time of an existing file to now. */
+DECL|method|touchFile
+specifier|public
+name|void
+name|touchFile
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|SecurityException
+block|{
+name|RAMFile
+name|file
+init|=
+operator|(
+name|RAMFile
+operator|)
+name|files
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+name|file
+operator|.
+name|lastModified
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
+block|}
 comment|/** Returns the length in bytes of a file in the directory. */
 DECL|method|fileLength
 specifier|public
