@@ -85,7 +85,10 @@ $Id$
      need to be reconstructed once per day. (cutting)
 
  15. Added a new IndexWriter method, getAnalyzer().  This returns the
-     analyzer used when adding documents to this index.
+     analyzer used when adding documents to this index. (cutting)
+
+ 16. Fixed a bug with IndexReader.lastModified().  Before, document
+     deletion did not update this.  Now it does.  (cutting)
 
 
 1.2 RC6
